--- a/actual/0.4/css/main.css
+++ b/actual/0.4/css/main.css
@@ -1,7 +1,72 @@
-/*html {
+html {
 	width: 100%;
 	height: 100vh;
 	font-family: Menlo, Arial, 'sans-serif';
 	color: #175;
-	background-color: #fefefe;
-}*/
+	background-color: rgba(17, 119, 85, 0.05);
+	font-size: 20px;
+	text-align: center;
+	max-width: 768px;
+	margin: auto;
+}
+
+img {
+	border-radius: 50%;
+	margin: 40px auto 20px auto;
+	max-width: 150px;
+	border: 5px solid rgba(17, 119, 85, 0.6);
+}
+
+h1 {
+	font-size: 2em;
+	margin-bottom: 10px;
+}
+
+h2 {
+	font-size: 1.2em;
+	margin-bottom: 20px;
+	font-style: italic;
+}
+
+p {
+	line-height: 1.35em;
+	letter-spacing: 0.5px;
+	text-align: left;
+}
+
+section {
+	background-color: rgba(17, 119, 85, 0.1);
+	padding: 35px 25px;
+	border-radius: 4px;
+	border-bottom: 4px solid rgba(17, 119, 85, 0.4);
+	margin: 40px auto;
+}
+
+section>h2 {
+	font-weight: bold;
+}
+
+a {
+	color: #117755;
+	text-decoration: none;
+	transition: all 0.3s ease-in-out;
+	padding: 5px 2px 0 2px;
+	border-bottom: 3px solid #117755;
+}
+
+a:hover {
+	color: #fefefe;
+	background-color: #117755;
+	border-radius: 5px;
+}
+
+#links a {
+	padding: 10px 5px 5px 5px;
+}
+
+footer {
+	text-align: center;
+	font-size: 0.6em;
+	margin-bottom: 10px;
+}
+
