--- a/actual/0.4/css/main.css
+++ b/actual/0.4/css/main.css
@@ -7,10 +7,12 @@ html {
 	font-size: 20px;
 	text-align: center;
 	max-width: 768px;
+	width: 100%;
+	height: 100%;
 	margin: auto;
 }
 
-img {
+header img {
 	border-radius: 50%;
 	margin: 40px auto 20px auto;
 	max-width: 150px;
@@ -24,6 +26,13 @@ h1 {
 
 h2 {
 	font-size: 1.2em;
+	margin-bottom: 20px;
+	font-style: italic;
+	font-weight: bold;
+}
+
+h3 {
+	font-size: 1.1em;
 	margin-bottom: 20px;
 	font-style: italic;
 }
@@ -42,15 +51,27 @@ section {
 	margin: 40px auto;
 }
 
-section>h2 {
-	font-weight: bold;
+.learn-more {
+	font-size: 0.8em;
+	color: rgba(17, 119, 85, 0.6);
+	border-color: rgba(17, 119, 85, 0.6);
+}
+
+.learn-more::before {
+	content: "➝";
+	font-size: 1.2em;
+}
+
+.learn-more:hover {
+	background-color: rgba(17, 119, 85, 0.6);
+	border-bottom-color: transparent;
 }
 
 a {
 	color: #117755;
 	text-decoration: none;
 	transition: all 0.3s ease-in-out;
-	padding: 5px 2px 0 2px;
+	padding: 5px 5px 0 5px;
 	border-bottom: 3px solid #117755;
 }
 
@@ -58,10 +79,6 @@ a:hover {
 	color: #fefefe;
 	background-color: #117755;
 	border-radius: 5px;
-}
-
-#links a {
-	padding: 10px 5px 5px 5px;
 }
 
 footer {
