--- a/actual/0.4/css/main.css
+++ b/actual/0.4/css/main.css
@@ -41,6 +41,7 @@ p {
 	line-height: 1.35em;
 	letter-spacing: 0.5px;
 	text-align: left;
+	transition: all 0.5s;
 }
 
 section {
@@ -78,7 +79,30 @@ a {
 a:hover {
 	color: #fefefe;
 	background-color: #117755;
-	border-radius: 5px;
+}
+
+.thumbnail {
+	width: 100%;
+	height: 450px;
+	background: url(../img/thumb_suaudeau.png)center no-repeat;
+	background-size: cover;
+	border: 4px solid #117755;
+	transition: all 0.5s;
+	margin-bottom: 20px;
+}
+
+.thumbnail a {
+	padding: 213px 190px;
+	opacity: 0;
+	position: relative;
+	top: 215px;
+	border: none;
+}
+
+.thumbnail a:hover {
+	opacity: 1;
+	color: #fefefe;
+	background-color: rgba(17, 119, 85, 0.5);
 }
 
 footer {
