--- a/actual/0.4/css/main.css
+++ b/actual/0.4/css/main.css
@@ -45,6 +45,7 @@ p {
 	line-height: 1.35em;
 	letter-spacing: 0.5px;
 	text-align: left;
+	margin-bottom: 1em;
 	transition: all 0.5s;
 }
 
@@ -135,12 +136,30 @@ header a:hover {
 	background: transparent;
 }
 
-header img {
+header a>img {
 	transition: all 0.3s ease-in-out;
 }
 
-header img:hover{
+header a>img:hover{
 	background-color: rgba(17, 119, 85, 1);
+}
+
+.back-index {
+	color: #117755;
+	padding: 5px 10px;
+	border-radius: 4px;
+	border: 4px solid rgba(17, 119, 85, 0.4);
+	font-size: 0.9em;
+}
+
+.back-index:hover {
+	color: #fefefe;
+	background-color: rgba(17, 119, 85, 0.4);
+	border: 4px solid rgba(17, 119, 85, 0.4);
+}
+
+.underline {
+	text-decoration: underline;;
 }
 
 /*=======================
