More work on work.html
And adding a « not found » page for the blog, a Typekit script (working
? not sure..)
It’s also the first version to be ready for upload on
http://sdancermichel.me, since I need it for presentation.

--- a/actual/0.4/css/main.css
+++ b/actual/0.4/css/main.css
@@ -8,7 +8,7 @@ html {
 	font-family: Menlo, Arial, 'sans-serif';
 	color: #175;
 	background-color: rgba(17, 119, 85, 0.05);
-	font-size: 20px;
+	font-size: 1.25em;
 	text-align: center;
 	max-width: 768px;
 	width: 100%;
@@ -88,7 +88,7 @@ a:hover {
 }
 
 .suaudeau {
-	background: url(../img/thumb_suaudeau.png)center no-repeat;
+	background: url(../img/thumb_suaudeau.png) center no-repeat;
 }
 
 .thumbnail {
@@ -168,3 +168,20 @@ header a>img:hover{
 /*=======================
 WORK.HTML SPECIFIC STYLES
 =======================*/
+
+.hexoplus {
+	background: url(../img/thumb_hexoplus.png) center no-repeat;
+}
+
+.hexoplus a {
+	padding: 213px 262px 213px 263px;
+}
+
+.carredartistes {
+	background: url(../img/thumb_carredartistes.png) center no-repeat;
+}
+
+.carredartistes a {
+	padding: 213px 214px;
+}
+
