--- a/wip/css/style.scss
+++ b/wip/css/style.scss
@@ -20,65 +20,64 @@ body {
   padding: 1% 5% 5% 5%;
   transition: 0.3s;
   z-index: 1;
-}
-#mainContainer h1 {
-  font-size: 2rem;
-  margin-bottom: 0.5em;
-}
-#mainContainer a {
-  color: white;
-  text-decoration: none;
-}
-#mainContainer p {
-  line-height: 1.3em;
-  margin-bottom: 0.75em;
-}
-#mainContainer p a {
-  border-bottom: 0.1em solid white;
-}
-#mainContainer ul {
-  margin: 1em 0;
-  padding-left: 0;
-}
-#mainContainer ul li {
-  display: inline-block;
-  margin: auto 0.3em;
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 0.5em;
+  }
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  p {
+    line-height: 1.3em;
+    margin-bottom: 0.75em;
+    a {
+      border-bottom: 0.1em solid white;
+    }
+  }
+  ul {
+    margin: 1em 0;
+    padding-left: 0;
+  }
+  ul li {
+    display: inline-block;
+    margin: auto 0.3em;
+  }
 }
 
 @media screen and (min-width: 40.063em) {
   body {
     font-size: 1.3rem;
   }
-
   #mainContainer {
     height: 100vh;
     border: 30px solid rgba(255, 255, 255, 0.9);
     padding: 13%;
-  }
-  #mainContainer h1 {
-    font-size: 3rem;
-  }
-  #mainContainer ul li {
-    margin: 1em;
+    h1 {
+      font-size: 3rem;
+    }
+    ul li {
+      margin: 1em;
+    }
   }
 }
+
 @media screen and (min-width: 64.063em) {
   body {
     font-size: 1.5rem;
   }
-
   #mainContainer {
     height: 100%;
     padding: 7% 20%;
-  }
-  #mainContainer h1 {
-    font-size: 4rem;
-  }
-  #mainContainer ul a {
-    transition: all 0.3s;
-  }
-  #mainContainer ul a:hover {
-    padding-bottom: 5px;
-    border-bottom: 5px solid white;
+    h1 {
+      font-size: 4rem;
+    }
+    ul a {
+      transition: all 0.3s;
+      &:hover {
+        padding-bottom: 5px;
+        border-bottom: 5px solid white;
+      }
+    }
   }
 }
