--- a/wip/css/style.css
+++ b/wip/css/style.css
@@ -75,10 +75,12 @@ body {
     font-size: 4rem;
   }
   #mainContainer ul a {
+    padding-bottom: 0px;
+    border-bottom: 6px solid rgba(255, 255, 255, 0);
     transition: all 0.3s;
   }
   #mainContainer ul a:hover {
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     border-bottom: 5px solid white;
   }
 }
