--- a/wip/css/style.scss
+++ b/wip/css/style.scss
@@ -73,9 +73,11 @@ body {
       font-size: 4rem;
     }
     ul a {
+      padding-bottom: 0px;
+      border-bottom: 6px solid rgba(255, 255, 255, 0);
       transition: all 0.3s;
       &:hover {
-        padding-bottom: 5px;
+        padding-bottom: 10px;
         border-bottom: 5px solid white;
       }
     }
