--- a/wip/css/style.css
+++ b/wip/css/style.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'jaapokki-regular';
+  src: url("../fonts/jaapokki-regular.eot");
+  src: url("../fonts/jaapokki-regular.ttf"), url("../fonts/jaapokki-regular.woff") format("woff"), url("../fonts/jaapokki-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/jaapokki-regular.svg#jaapokki-regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'inconsolata';
+  src: url("../fonts/inconsolata.otf") format("truetype");
+}
 body {
   width: 100%;
   height: 100%;
@@ -5,7 +16,7 @@ body {
   background: url("../img/bg.jpg") 35% 35% no-repeat;
   text-align: center;
   color: white;
-  font-family: Arial, sans-serif;
+  font-family: inconsolata, sans-serif;
   font-size: 1.1rem;
 }
 
@@ -22,7 +33,8 @@ body {
   z-index: 1;
 }
 #mainContainer h1 {
-  font-size: 2rem;
+  font-family: jaapokki-regular, sans-serif;
+  font-size: 1.78rem;
   margin-bottom: 0.5em;
 }
 #mainContainer a {
@@ -72,7 +84,7 @@ body {
     padding: 7% 20%;
   }
   #mainContainer h1 {
-    font-size: 4rem;
+    font-size: 3.55rem;
   }
   #mainContainer ul a {
     padding-bottom: 0px;
