--- a/wip/css/style.scss
+++ b/wip/css/style.scss
@@ -1,3 +1,19 @@
+@font-face {
+font-family: 'jaapokki-regular';
+src: url('../fonts/jaapokki-regular.eot');
+src: url('../fonts/jaapokki-regular.ttf'),
+     url('../fonts/jaapokki-regular.woff') format('woff'),
+     url('../fonts/jaapokki-regular.eot?#iefix') format('embedded-opentype'),
+     url('../fonts/jaapokki-regular.svg#jaapokki-regular') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+
+@font-face {
+font-family: 'inconsolata';
+src: url('../fonts/inconsolata.otf') format('truetype');
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -5,7 +21,7 @@ body {
   background: url("../img/bg.jpg") 35% 35% no-repeat;
   text-align: center;
   color: white;
-  font-family: Arial, sans-serif;
+  font-family: inconsolata, sans-serif;
   font-size: 1.1rem;
 }
 
@@ -21,7 +37,8 @@ body {
   transition: 0.3s;
   z-index: 1;
   h1 {
-    font-size: 2rem;
+    font-family: jaapokki-regular, sans-serif;
+    font-size: 1.78rem;
     margin-bottom: 0.5em;
   }
   a {
@@ -70,7 +87,7 @@ body {
     height: 100%;
     padding: 7% 20%;
     h1 {
-      font-size: 4rem;
+      font-size: 3.55rem;
     }
     ul a {
       padding-bottom: 0px;
