--- a/wip/css/style.css
+++ b/wip/css/style.css
@@ -27,8 +27,11 @@ body {
   width: 100%;
   height: 100%;
   border: 15px solid rgba(255, 255, 255, 0.9);
+  background: url("../img/logo1.svg") center no-repeat;
+  background-size: 70%;
   background-color: rgba(20, 60, 100, 0.7);
-  padding: 1% 5% 5% 5%;
+  box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.1) inset;
+  padding: auto 5%;
   transition: 0.3s;
   z-index: 1;
 }
@@ -66,6 +69,8 @@ body {
     height: 100vh;
     border: 30px solid rgba(255, 255, 255, 0.9);
     padding: 13%;
+    background-size: 55%;
+    background-position: center 30%;
   }
   #mainContainer h1 {
     font-size: 3rem;
@@ -82,6 +87,8 @@ body {
   #mainContainer {
     height: 100%;
     padding: 7% 20%;
+    background-size: 30%;
+    background-position: center 25%;
   }
   #mainContainer h1 {
     font-size: 3.55rem;
