--- a/wip/css/style.css
+++ b/wip/css/style.css
@@ -21,11 +21,10 @@ body {
 }
 
 #mainContainer {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  max-height: 100%;
   border: 15px solid rgba(255, 255, 255, 0.9);
   background: url("../img/logo1.svg") center no-repeat;
   background-size: 70%;
@@ -52,7 +51,7 @@ body {
   border-bottom: 0.1em solid white;
 }
 #mainContainer ul {
-  margin: 1em 0;
+  margin: 1em 0 0 0;
   padding-left: 0;
 }
 #mainContainer ul li {
@@ -66,9 +65,9 @@ body {
   }
 
   #mainContainer {
-    height: 100vh;
+    height: 100%;
     border: 30px solid rgba(255, 255, 255, 0.9);
-    padding: 13%;
+    padding: 1% 13%;
     background-size: 55%;
     background-position: center 30%;
   }
@@ -76,7 +75,7 @@ body {
     font-size: 3rem;
   }
   #mainContainer ul li {
-    margin: 1em;
+    margin: auto 0.7em;
   }
 }
 @media screen and (min-width: 64.063em) {
