--- a/wip/css/style.scss
+++ b/wip/css/style.scss
@@ -26,11 +26,10 @@ body {
 }
 
 #mainContainer {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  max-height: 100%;
   border: 15px solid rgba(255, 255, 255, 0.9);
   background: url('../img/logo1.svg') center  no-repeat;
   background-size: 70%;
@@ -56,7 +55,7 @@ body {
     }
   }
   ul {
-    margin: 1em 0;
+    margin: 1em 0 0 0;
     padding-left: 0;
   }
   ul li {
@@ -70,16 +69,16 @@ body {
     font-size: 1.3rem;
   }
   #mainContainer {
-    height: 100vh;
+    height: 100%;
     border: 30px solid rgba(255, 255, 255, 0.9);
-    padding: 13%;
+    padding: 1% 13%;
     background-size: 55%;
     background-position: center 30%;
     h1 {
       font-size: 3rem;
     }
     ul li {
-      margin: 1em;
+      margin: auto 0.7em;
     }
   }
 }
