--- a/wip/css/loader.css
+++ b/wip/css/loader.css
@@ -8,7 +8,9 @@
   height: 100vh;
   float: left;
   width: 100%;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 999;
 }
 
