--- a/wip/css/style.css
+++ b/wip/css/style.css
@@ -1,14 +1,15 @@
 @font-face {
   font-family: 'jaapokki-regular';
-  src: url("../fonts/jaapokki-regular.eot");
-  src: url("../fonts/jaapokki-regular.ttf"), url("../fonts/jaapokki-regular.woff") format("woff"), url("../fonts/jaapokki-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/jaapokki-regular.svg#jaapokki-regular") format("svg");
+  src: url('../fonts/jaapokki-regular.eot');
+  src: url('../fonts/jaapokki-regular.ttf'), url('../fonts/jaapokki-regular.woff') format('woff'), url('../fonts/jaapokki-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/jaapokki-regular.svg#jaapokki-regular') format('svg');
   font-weight: normal;
-  font-style: normal;
-}
+  font-style: normal; }
+
 @font-face {
   font-family: 'inconsolata';
-  src: url("../fonts/inconsolata.otf") format("truetype");
-}
+  src: url('../fonts/inconsolata.otf') format('truetype'); }
+
+/* line 17, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
 body {
   width: 100%;
   height: 100%;
@@ -17,88 +18,90 @@ body {
   text-align: center;
   color: white;
   font-family: inconsolata, sans-serif;
-  font-size: 1.1rem;
-}
+  font-size: 1.1rem; }
 
+/* line 28, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
 #mainContainer {
   position: relative;
   width: 100%;
   min-height: 100vh;
   max-height: 100%;
-  border: 15px solid rgba(255, 255, 255, 0.9);
-  background: url("../img/logo1.svg") center no-repeat;
+  background: url('../img/logo1.svg') center no-repeat;
   background-size: 70%;
   background-color: rgba(20, 60, 100, 0.7);
   box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.1) inset;
-  padding: auto 5%;
+  padding: 10vh 1vw;
   transition: 0.3s;
-  z-index: 1;
-}
-#mainContainer h1 {
-  font-family: jaapokki-regular, sans-serif;
-  font-size: 1.78rem;
-  margin-bottom: 0.5em;
-}
-#mainContainer a {
-  color: white;
-  text-decoration: none;
-}
-#mainContainer p {
-  line-height: 1.3em;
-  margin-bottom: 0.75em;
-}
-#mainContainer p a {
-  border-bottom: 0.1em solid white;
-}
-#mainContainer ul {
-  margin: 1em 0 0 0;
-  padding-left: 0;
-}
-#mainContainer ul li {
-  display: inline-block;
-  margin: auto 0.3em;
-}
+  z-index: 1; }
+  /* line 41, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+  #mainContainer h1 {
+    font-family: jaapokki-regular, sans-serif;
+    font-size: 1.78rem;
+    margin-bottom: 1em; }
+  /* line 46, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+  #mainContainer a {
+    color: white;
+    text-decoration: none; }
+  /* line 50, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+  #mainContainer #info {
+    margin: 2em auto; }
+  /* line 53, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+  #mainContainer p {
+    line-height: 1.3em;
+    margin-bottom: 0.75em; }
+    /* line 56, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+    #mainContainer p a {
+      border-bottom: 0.1em solid white; }
+  /* line 60, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+  #mainContainer ul {
+    margin: 1em 0 0 0;
+    padding-left: 0; }
+    /* line 63, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+    #mainContainer ul li {
+      display: inline-block;
+      margin: auto 0.3em; }
 
 @media screen and (min-width: 40.063em) {
+  /* line 71, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
   body {
-    font-size: 1.3rem;
-  }
+    font-size: 1.3rem; }
 
+  /* line 74, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
   #mainContainer {
     height: 100%;
     border: 30px solid rgba(255, 255, 255, 0.9);
-    padding: 1% 13%;
+    padding: 15% 10%;
     background-size: 55%;
-    background-position: center 30%;
-  }
-  #mainContainer h1 {
-    font-size: 3rem;
-  }
-  #mainContainer ul li {
-    margin: auto 0.7em;
-  }
-}
-@media screen and (min-width: 64.063em) {
-  body {
-    font-size: 1.5rem;
-  }
+    background-position: center 30%; }
+    /* line 80, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+    #mainContainer h1 {
+      font-size: 3rem; }
+    /* line 83, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+    #mainContainer ul li {
+      margin: auto 0.7em; }
+ }
 
+@media screen and (min-width: 64.063em) {
+  /* line 90, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+  body {
+    font-size: 1.5rem; }
+
+  /* line 93, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
   #mainContainer {
     height: 100%;
     padding: 7% 20%;
     background-size: 30%;
-    background-position: center 25%;
-  }
-  #mainContainer h1 {
-    font-size: 3.55rem;
-  }
-  #mainContainer ul a {
-    padding-bottom: 0px;
-    border-bottom: 6px solid rgba(255, 255, 255, 0);
-    transition: all 0.3s;
-  }
-  #mainContainer ul a:hover {
-    padding-bottom: 10px;
-    border-bottom: 5px solid white;
-  }
-}
+    background-position: center 25%; }
+    /* line 98, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+    #mainContainer h1 {
+      font-size: 3.55rem; }
+    /* line 101, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+    #mainContainer ul a {
+      padding-bottom: 0px;
+      border-bottom: 6px solid rgba(255, 255, 255, 0);
+      transition: all 0.3s; }
+      /* line 105, /Users/sebastiendancermichel/Documents/EWORK/Sites Web perso/sdancermichel.me/wip/css/style.scss */
+      #mainContainer ul a:hover {
+        padding-bottom: 10px;
+        border-bottom: 5px solid white; }
+ }
