--- a/wip/css/style.scss
+++ b/wip/css/style.scss
@@ -30,22 +30,25 @@ body {
   width: 100%;
   min-height: 100vh;
   max-height: 100%;
-  border: 15px solid rgba(255, 255, 255, 0.9);
-  background: url('../img/logo1.svg') center  no-repeat;
+  // border: 15px solid rgba(255, 255, 255, 0.9);
+  background: url('../img/logo1.svg') center no-repeat;
   background-size: 70%;
   background-color: rgba(20, 60, 100, 0.7);
   box-shadow:  0px 0px 100px rgba(0,0,0,0.1) inset;
-  padding: auto 5%;
+  padding: 10vh 1vw;
   transition: 0.3s;
   z-index: 1;
   h1 {
     font-family: jaapokki-regular, sans-serif;
     font-size: 1.78rem;
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
   }
   a {
     color: white;
     text-decoration: none;
+  }
+  #info {
+    margin: 2em auto;
   }
   p {
     line-height: 1.3em;
@@ -57,10 +60,10 @@ body {
   ul {
     margin: 1em 0 0 0;
     padding-left: 0;
-  }
-  ul li {
-    display: inline-block;
-    margin: auto 0.3em;
+    li {
+      display: inline-block;
+      margin: auto 0.3em;
+    }
   }
 }
 
@@ -71,7 +74,7 @@ body {
   #mainContainer {
     height: 100%;
     border: 30px solid rgba(255, 255, 255, 0.9);
-    padding: 1% 13%;
+    padding: 15% 10%;
     background-size: 55%;
     background-position: center 30%;
     h1 {
