border is now plain white

--- a/wip/css/style.scss
+++ b/wip/css/style.scss
@@ -73,7 +73,7 @@ body {
   }
   #mainContainer {
     height: 100%;
-    border: 30px solid rgba(255, 255, 255, 0.9);
+    border: 30px solid #fff;
     padding: 15% 10%;
     background-size: 55%;
     background-position: center 30%;
