--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -1,3 +1,10 @@
 head
-  title NPM Build Boilerplate
+  title Seb Dancer-Michel
+  meta(charset='UTF-8')
+  meta(name='viewport' content='width=device-width, initial-scale=1.0')
+  meta(http-equiv='X-UA-Compatible' content='ie-edge')
+  link(rel='shortcut icon' type='image/x-icon' href='dist/images/favicon.ico')
+  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,600')
+  link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css')
   link(rel='stylesheet' href='dist/css/main.css')
+  //- don't forget to remove dist/ from links
