--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,5 +3,27 @@ html(dir='ltr' lang='en' class='no-js')
   include includes/head.pug
 
   body
-    h1 Hey
+    div.wrapper
+      div.conversation
+        section.conversation__bubble.conversation__bubble--general.hidden
+          p.
+            Hi! My name is #[strong Sébastien Dancer-Michel]. I am a 22 years old French student at #[a(href='http://hetic.net') HETIC], Paris.
+
+        section.conversation__bubble.conversation__bubble--general.hidden
+          p.
+            I’m a #[strong junior front-end developer], also interested in UI/UX design and generative design.
+          p.
+            Aside from web stuff, I have been playing handball since I was 11, I love cats and red pandas. I am deeply in love with Toulouse, my hometown.
+
+        section.conversation__bubble.conversation__bubble--general.hidden
+          p.
+            I #[a(href='https://twitter.com/far0s') tweet] everyday, and I try to #[a(href='https://medium.com/@Far0s') write] when I can. I #[a(href='https://instagram.com/far0s') post pics] of my cats and sometimes #[a(href='https://www.behance.net/sebdancermichel') publish] my design work. But most of all, I #[a(href='https://github.com/far0s') code].
+
+        section.conversation__bubble.conversation__bubble--general.hidden
+          p.
+            Oh! And I’m looking for a #[strong 3 month internship from July to September as a front-end developer], feel free to contact me on the internets (#[a(href='mailto:s.dancermichel@gmail.com') or by mail]) 😎
+
+        section.conversation__bubble.conversation__bubble--general.conversation__bubble--small.hidden
+          p ❤️
+
     script(src='dist/js/app.min.js')
