[add] reactions component
+ fix package.json

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -26,4 +26,21 @@ html(dir='ltr' lang='en' class='no-js')
         section.conversation__bubble.conversation__bubble--general.conversation__bubble--small.hidden
           p ❤️
 
-    script(src='dist/js/app.min.js')
+    div.reactions
+      div.reaction__button
+        p 🍆
+      div.reaction__button
+        p ⚽️
+      div.reaction__button
+        p 🎮
+      //- div.reaction__button
+      //-   p 🍿
+      //- div.reaction__button
+      //-   p 😸
+      //- div.reaction__button
+      //-   p 🎧
+      //- div.reaction__button
+      //-   p red pandas
+
+
+    script(src='js/app.min.js')
