--- a/src/scss/_reactions.scss
+++ b/src/scss/_reactions.scss
@@ -15,37 +15,55 @@
   opacity: 1;
   pointer-events: all;
   transform: translate3d(0, 0px, 0);
-  transition: .5s ease-out 11s;
+  transition: .5s ease-out;
   @media screen and (min-width: #{$large}) {
     min-height: 120px;
     max-width: 500px;
     left: calc(50% - 250px);
   }
-  .reaction__button {
-    border-radius: 20px;
-    background: $teal;
-    height: 41px;
-    padding: 6px 22px;
-    margin: 5px;
-    box-sizing: border-box;
-    transition: .2s ease-out;
-    cursor: pointer;
-    > p {
-      color: $white;
-      font-weight: 400;
-    }
-    @media screen and (min-width: #{$large}) {
-      height: 59px;
-      padding: 12px 36px;
-      border-radius: 30px;
-    }
-    &:hover, &:focus {
-      box-shadow: $teal 0 2px 10px 0;
-    }
-  }
   &.hidden {
     pointer-events: none;
     opacity: 0;
     transform: translate3d(0, 20px, 0);
+  }
+}
+
+.reaction__button {
+  border-radius: 20px;
+  background: $teal;
+  height: 41px;
+  padding: 6px 22px;
+  margin: 5px;
+  box-sizing: border-box;
+  transition: .2s ease-out;
+  cursor: pointer;
+  > p {
+    color: $white;
+    font-weight: 400;
+  }
+  @media screen and (min-width: #{$large}) {
+    height: 59px;
+    padding: 12px 36px;
+    border-radius: 30px;
+  }
+  &:hover, &:focus {
+    box-shadow: $teal 0 2px 10px 0;
+  }
+}
+
+.conversation .reaction__button {
+  margin-left: auto;
+  margin-bottom: 10px;
+  pointer-events: none;
+  transform: translate3d(0, 0px, 0);
+  opacity: 1;
+  transition: transform .5s ease-out, opacity .5s ease-out;
+  @media screen and (min-width: #{$large}) {
+    margin-bottom: 10px;
+  }
+  &.hidden {
+    opacity: 0;
+    transform: translate3d(0, -20px, 0);
+    transition-delay: 11s; 
   }
 }
