--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -3,7 +3,14 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   meta(http-equiv='X-UA-Compatible' content='ie-edge')
-  link(rel='shortcut icon' type='image/x-icon' href='images/favicon.ico')
+  link(rel="apple-touch-icon", sizes="180x180", href="images/apple-touch-icon.png")
+  link(rel="icon", type="image/png", href="images/favicon-32x32.png", sizes="32x32")
+  link(rel="icon", type="image/png", href="images/favicon-16x16.png", sizes="16x16")
+  link(rel="manifest", href="images/manifest.json")
+  link(rel="mask-icon", href="images/safari-pinned-tab.svg", color="#5bbad5")
+  link(rel="shortcut icon", href="images/favicon.ico")
+  meta(name="msapplication-config", content="images/browserconfig.xml")
+  meta(name="theme-color", content="#ffffff")
   link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,600')
   link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css')
   link(rel='stylesheet' href='css/main.css')
