--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -29,13 +29,13 @@ html(dir='ltr' lang='en' class='no-js')
         //- div.reaction__button.hidden
         //-   p 🍆
 
-    div.reactions.hidden.first-load
-      div.reaction__button
-        p 🍆
-      div.reaction__button
-        p ⚽️
-      div.reaction__button
-        p 🎮
+    div.reactions.hidden
+      //- div.reaction__button
+      //-   p 🍆
+      //- div.reaction__button
+      //-   p ⚽️
+      //- div.reaction__button
+      //-   p 🎮
       //- div.reaction__button
       //-   p 🍿
       //- div.reaction__button
