[fix] disabled gradient overlay on bottom

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -29,7 +29,7 @@ html(dir='ltr' lang='en' class='no-js')
         //- div.reaction__button.hidden
         //-   p 🍆
 
-    div.reactions.hidden
+    //- div.reactions.hidden
       //- div.reaction__button
       //-   p 🍆
       //- div.reaction__button
