[add] loading bubble and behavior

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -21,29 +21,27 @@ html(dir='ltr' lang='en' class='no-js')
 
         div.conversation__bubble.conversation__bubble--general.hidden
           p.
-            Oh! And I’m looking for a #[strong 3 month internship from July to September as a front-end developer], feel free to contact me on the internets (#[a(href='mailto:s.dancermichel@gmail.com' target='_blank') or by mail]) 😎
+            Oh! And I’m looking for a #[strong 3 month internship from July to September as a front-end developer], feel free to contact me on the internets (#[a(href='mailto:s.dancermichel@gmail.com') or by mail]) 😎
 
         div.conversation__bubble.conversation__bubble--general.conversation__bubble--small.hidden
           p ❤️
 
+        div.conversation__bubble.conversation__bubble--loader.conversation__bubble--small
+          div.loader
+            div.dot.dot1
+            div.dot.dot2
+            div.dot.dot3
+            div.dot.dot4
+
         //- div.reaction__button.hidden
         //-   p 🍆
 
-    //- div.reactions.hidden
-      //- div.reaction__button
-      //-   p 🍆
-      //- div.reaction__button
-      //-   p ⚽️
-      //- div.reaction__button
-      //-   p 🎮
-      //- div.reaction__button
-      //-   p 🍿
-      //- div.reaction__button
-      //-   p 😸
-      //- div.reaction__button
-      //-   p 🎧
-      //- div.reaction__button
-      //-   p red pandas
-
+    div.reactions.hidden
+      div.reaction__button
+        p 🍆
+      div.reaction__button
+        p 😸
+      div.reaction__button
+        p 🎧
 
     script(src='js/app.min.js')
