--- a/src/scss/_reactions.scss
+++ b/src/scss/_reactions.scss
@@ -15,7 +15,7 @@
   opacity: 1;
   pointer-events: all;
   transform: translate3d(0, 0px, 0);
-  transition: .5s ease-out;
+  transition: .5s ease-out 11s;
   @media screen and (min-width: #{$large}) {
     min-height: 120px;
     max-width: 500px;
@@ -37,6 +37,7 @@
   box-sizing: border-box;
   transition: .2s ease-out;
   cursor: pointer;
+  transform: translate3d(0,0,0);
   > p {
     color: $white;
     font-weight: 400;
@@ -48,6 +49,7 @@
   }
   &:hover, &:focus {
     box-shadow: $teal 0 2px 10px 0;
+    transform: translate3d(0, -2px, 0);
   }
 }
 
@@ -64,6 +66,6 @@
   &.hidden {
     opacity: 0;
     transform: translate3d(0, -20px, 0);
-    transition-delay: 11s; 
+    transition-delay: 11s;
   }
 }
