--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'utilities';
 @import 'conversation';
 @import 'reactions';
+@import 'loading';
 
 body {
   background: $lightblue;
@@ -30,7 +31,18 @@ strong {
 a {
   font-weight: 600;
   color: $teal;
-  &:hover, &:focus {
-    text-decoration: underline;
+  position: relative;
+  &::after {
+    content: '';
+    background: #6CBDD3;
+    height: 2px;
+    width: 0%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transition: .2s cubic-bezier(0.22, 0.61, 0.36, 1);
+  }
+  &:hover::after, &:focus::after, &:active::after {
+    width: 100%;
   }
 }
