--- a/src/scss/_reactions.scss
+++ b/src/scss/_reactions.scss
@@ -54,14 +54,20 @@
 }
 
 .conversation .reaction__button {
+  cursor: default;
   margin-left: auto;
   margin-bottom: 10px;
-  pointer-events: none;
+  margin-right: 0;
+  margin-top: 0;
   transform: translate3d(0, 0px, 0);
   opacity: 1;
   transition: transform .5s ease-out, opacity .5s ease-out;
   @media screen and (min-width: #{$large}) {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+  }
+  &:hover, &:active {
+    box-shadow: none;
+    transform: translate3d(0, 0px, 0);
   }
   &.hidden {
     opacity: 0;
