--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@ body {
   background: $lightblue;
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, span, a {
