--- a/src/scss/_reactions.scss
+++ b/src/scss/_reactions.scss
@@ -55,15 +55,12 @@
 
 .conversation .reaction__button {
   cursor: default;
-  margin-left: auto;
-  margin-bottom: 10px;
-  margin-right: 0;
-  margin-top: 0;
+  margin: 0 auto 10px 0;
   transform: translate3d(0, 0px, 0);
   opacity: 1;
   transition: transform .5s ease-out, opacity .5s ease-out;
   @media screen and (min-width: #{$large}) {
-    margin-bottom: 20px;
+    margin: 0 auto 20px 0;
   }
   &:hover, &:active {
     box-shadow: none;
