--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -11,6 +11,6 @@ head
   link(rel="shortcut icon", href="images/favicon.ico")
   meta(name="msapplication-config", content="images/browserconfig.xml")
   meta(name="theme-color", content="#ffffff")
-  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,600')
+  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,600i')
   link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css')
   link(rel='stylesheet' href='css/main.css')
