--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -91,7 +91,7 @@ html(dir='ltr' lang='en' class='no-js')
           }, 1550);
           break;
         case '😸':
-          var content = '<p>I love cats. I have two little angels named Malice and Chanelle. They\'re both in Toulouse with my parents, and I miss them so much. So if you have a cat, don\'t worry if I want to hug them when I see them, okay?</p>';
+          var content = '<p>I love cats. I have two little angels named Malice and Chanelle. They\'re both in Toulouse with my parents, and I miss them so much. So if you have a cat, don\'t worry if I want to hug them when I see them, okay?</p><img src="images/chanelle.jpg" alt="Chanelle">';
           var content2 = '<p>Also, can someone explain to me why there isn\'t any red panda emoji ? 🤔</p>';
           createBubble(conversation, content);
           createBubble(conversation, content2);
@@ -101,8 +101,8 @@ html(dir='ltr' lang='en' class='no-js')
           }, 1550);
           break;
         case '🎧':
-          var content = '<p>I\'ve been listening to a lot of <a href="https://www.youtube.com/watch?v=JXo1LWv6kO8" target="_blank">Superpoze</a> recently.</p><p>I wrote <a href="https://medium.com/@Far0s/thousand-exploding-suns-71a914e62ec7#.ndbhq5fjx" target="_blank">a few words</a> about it too!</p>';
-          var content2 = '<p><a href="https://www.youtube.com/watch?v=M94vOyffoqs" target="_blank">Lemaitre</a> and <a href="https://www.youtube.com/watch?v=p-ZvHDaR72Q" target="_blank">French79</a> are artists who are frequently popping in my queue too!</p>';
+          var content = '<p>I\'ve been listening to a lot of <a href="https://www.youtube.com/watch?v=JXo1LWv6kO8" target="_blank">Superpoze</a> recently.</p><p>I wrote <a href="https://medium.com/@Far0s/thousand-exploding-suns-71a914e62ec7#.ndbhq5fjx" target="_blank">a few words</a> about it too!</p><img src="images/superpoze.jpg" alt="Superpoze">';
+          var content2 = '<p><a href="https://www.youtube.com/watch?v=M94vOyffoqs" target="_blank">Lemaitre</a> and <a href="https://www.youtube.com/watch?v=p-ZvHDaR72Q" target="_blank">French79</a> are artists who are frequently popping in my queue too!</p><img src="images/lemaitre.jpg" alt="Lemaitre">';
           createBubble(conversation, content);
           createBubble(conversation, content2);
           window.setTimeout(function () {
