--- a/src/scss/_loading.scss
+++ b/src/scss/_loading.scss
@@ -1,66 +1,93 @@
 // LOADING BUBBLE
-
 .conversation__bubble--loader {
-  padding: 17px 16px 16px 16px !important;
-  .loader {
-    position: relative;
-    width: 100%;
-    height: 8px;
-    display: flex;
-    align-items: center;
+    padding: 17px 16px 16px 16px !important;
+    .loader {
+        position: relative;
+        width: 100%;
+        height: 8px;
+        display: flex;
+        align-items: center;
+        @media screen and (min-width: #{$large}) {
+            height: 12px;
+        }
+        .dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 100%;
+            background: $teal;
+            position: absolute;
+            animation-duration: 0.5s;
+            animation-timing-function: ease;
+            animation-iteration-count: infinite;
+            @media screen and (min-width: #{$large}) {
+                width: 12px;
+                height: 12px;
+                .dot3 {
+                    left: 18px;
+                }
+                .dot4 {
+                    left: 36px;
+                }
+            }
+        }
+        .dot1,
+        .dot2 {
+            left: 0;
+        }
+        .dot3 {
+            left: 13px;
+        }
+        .dot4 {
+            left: 26px;
+        }
+        .dot1 {
+            animation-name: reveal;
+        }
+        .dot2,
+        .dot3 {
+            animation-name: slide;
+        }
+        .dot4 {
+            animation-name: reveal;
+            animation-direction: reverse;
+        }
+        @media screen and (min-width: #{$large}) {
+            .dot3 {
+                left: 18px;
+            }
+            .dot4 {
+                left: 36px;
+            }
+        }
+    }
     @media screen and (min-width: #{$large}) {
-      height: 12px;
+        padding: 24px !important;
     }
-    .dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 100%;
-      background: $teal;
-      position: absolute;
-      animation-duration: 0.5s;
-      animation-timing-function: ease;
-      animation-iteration-count: infinite;
-      @media screen and (min-width: #{$large}) {
-        width: 12px;
-        height: 12px;
-        .dot3 { left: 18px; }
-        .dot4 { left: 36px; }
-      }
+    &.hidden {
+        padding: 0;
+        margin-bottom: 0 !important;
     }
-    .dot1, .dot2 { left: 0; }
-    .dot3 { left: 13px; }
-    .dot4 { left: 26px; }
-    .dot1 { animation-name: reveal; }
-    .dot2, .dot3 { animation-name: slide; }
-    .dot4 {
-      animation-name: reveal;
-      animation-direction: reverse;
-    }
-    @media screen and (min-width: #{$large}) {
-      .dot3 { left: 18px; }
-      .dot4 { left: 36px; }
-    }
-  }
-  @media screen and (min-width: #{$large}) {
-    padding: 24px !important;
-  }
-  &.hidden {
-    padding: 0;
-    margin-bottom: 0 !important;
-  }
 }
 
 @keyframes reveal {
-  from { transform: scale(0.001); }
-  to { transform: scale(1); }
+    from {
+        transform: scale(0.001);
+    }
+    to {
+        transform: scale(1);
+    }
 }
 
 @keyframes slide {
-  to { transform: translateX(13px) }
+    to {
+        transform: translateX(13px)
+    }
 }
 
 @media screen and (min-width: #{$large}) {
-  @keyframes slide {
-    to { transform: translateX(18px) }
-  }
+    @keyframes slide {
+        to {
+            transform: translateX(18px)
+        }
+    }
 }
