--- a/src/scss/_reactions.scss
+++ b/src/scss/_reactions.scss
@@ -1,73 +1,74 @@
 // REACTIONS
-
 .reactions {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  min-height: 100px;
-  padding: 28px 25px 15px 25px;
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  opacity: 1;
-  pointer-events: all;
-  transform: translate3d(0, 0px, 0);
-  transition: .5s ease-out 1s;
-  @media screen and (min-width: #{$large}) {
-    min-height: 120px;
-    max-width: 500px;
-    left: calc(50% - 250px);
-  }
-  &.hidden {
-    pointer-events: none;
-    opacity: 0;
-    transform: translate3d(0, 20px, 0);
-  }
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    min-height: 100px;
+    padding: 28px 25px 15px 25px;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    pointer-events: all;
+    transform: translate3d(0, 0px, 0);
+    transition: .5s ease-out 1s;
+    @media screen and (min-width: #{$large}) {
+        min-height: 120px;
+        max-width: 500px;
+        left: calc(50% - 250px);
+    }
+    &.hidden {
+        pointer-events: none;
+        opacity: 0;
+        transform: translate3d(0, 20px, 0);
+    }
 }
 
 .reaction__button {
-  border-radius: 20px;
-  background: $teal;
-  height: 41px;
-  padding: 6px 22px;
-  margin: 5px;
-  box-sizing: border-box;
-  transition: .2s ease-out;
-  cursor: pointer;
-  transform: translate3d(0,0,0);
-  > p {
-    color: $white;
-    font-weight: 400;
-  }
-  @media screen and (min-width: #{$large}) {
-    height: 59px;
-    padding: 12px 36px;
-    border-radius: 30px;
-  }
-  &:hover, &:focus {
-    box-shadow: $teal 0 2px 10px 0;
-    transform: translate3d(0, -2px, 0);
-  }
+    border-radius: 20px;
+    background: $teal;
+    height: 41px;
+    padding: 6px 22px;
+    margin: 5px;
+    box-sizing: border-box;
+    transition: .2s ease-out;
+    cursor: pointer;
+    transform: translate3d(0, 0, 0);
+    >p {
+        color: $white;
+        font-weight: 400;
+    }
+    @media screen and (min-width: #{$large}) {
+        height: 59px;
+        padding: 12px 36px;
+        border-radius: 30px;
+    }
+    &:hover,
+    &:focus {
+        box-shadow: $teal 0 2px 10px 0;
+        transform: translate3d(0, -2px, 0);
+    }
 }
 
 .conversation .reaction__button {
-  cursor: default;
-  margin: 0 auto 10px 0;
-  transform: translate3d(0, 0px, 0);
-  opacity: 1;
-  transition: transform .5s ease-out, opacity .5s ease-out;
-  @media screen and (min-width: #{$large}) {
-    margin: 0 auto 20px 0;
-  }
-  &:hover, &:active {
-    box-shadow: none;
+    cursor: default;
+    margin: 0 auto 10px 0;
     transform: translate3d(0, 0px, 0);
-  }
-  &.hidden {
-    opacity: 0;
-    transform: translate3d(0, -20px, 0);
-    transition-delay: 11s;
-  }
+    opacity: 1;
+    transition: transform .5s ease-out, opacity .5s ease-out;
+    @media screen and (min-width: #{$large}) {
+        margin: 0 auto 20px 0;
+    }
+    &:hover,
+    &:active {
+        box-shadow: none;
+        transform: translate3d(0, 0px, 0);
+    }
+    &.hidden {
+        opacity: 0;
+        transform: translate3d(0, -20px, 0);
+        transition-delay: 11s;
+    }
 }
