--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,47 +4,65 @@
 @import 'conversation';
 @import 'reactions';
 @import 'loading';
-
 body {
-  background: $lightblue;
-  width: 100%;
-  height: 100%;
-  scroll-behavior: smooth;
+    background: $lightblue;
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, span, a {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-  line-height: 29px;
-  font-weight: 300;
-  color: $grey;
-  margin: 0;
-  text-decoration: none;
-  @media screen and (min-width: #{$large}) {
-    font-size: 22px;
-    line-height: 35px;
-  }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+a {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    line-height: 29px;
+    font-weight: 300;
+    color: $grey;
+    margin: 0;
+    text-decoration: none;
+    @media screen and (min-width: #{$large}) {
+        font-size: 22px;
+        line-height: 35px;
+    }
+}
+
+.wrapper {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    min-height: 100vh;
+    height: 100%;
 }
 
 strong {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 a {
-  font-weight: 600;
-  color: $teal;
-  position: relative;
-  &::after {
-    content: '';
-    background: #6CBDD3;
-    height: 2px;
-    width: 0%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    transition: .2s cubic-bezier(0.22, 0.61, 0.36, 1);
-  }
-  &:hover::after, &:focus::after, &:active::after {
-    width: 100%;
-  }
+    font-weight: 600;
+    color: $teal;
+    position: relative;
+    &::after {
+        content: '';
+        background: #6CBDD3;
+        height: 2px;
+        width: 0%;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        transition: .2s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
+    &:hover::after,
+    &:focus::after,
+    &:active::after {
+        width: 100%;
+    }
 }
