--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -11,5 +11,5 @@ head
   link(rel="shortcut icon", href="images/favicon.ico")
   meta(name="msapplication-config", content="images/browserconfig.xml")
   meta(name="theme-color", content="#ffffff")
-  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,600i')
+  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Merriweather:300,300i,600,600i')
   link(rel='stylesheet' href='css/main.css')
