💄Updating conversation bubbles text

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,8 +12,10 @@ html(dir='ltr' lang='en' class='no-js')
         div.conversation__bubble.conversation__bubble--general.hidden
           p.
             I’m a #[strong front-end developer], and I focus on creating modern, accessible and performant websites.
+
+        div.conversation__bubble.conversation__bubble--general.hidden
           p.
-            I also love to fiddle with p5.js and generative design and learn about anything new in tech.
+            I also love to fiddle with #[strong generative design] and learn about anything new in #[strong web development].
 
         div.conversation__bubble.conversation__bubble--general.hidden
           p.
@@ -21,15 +23,7 @@ html(dir='ltr' lang='en' class='no-js')
 
         div.conversation__bubble.conversation__bubble--general.hidden
           p.
-            Oh! And I’m looking for a #[strong 3 to 4 months internship starting July 2017 as a front-end developer], feel free to contact me on the internets (#[a(href='mailto:s.dancermichel@gmail.com') or by mail]) 😎
-
-    //- div.reactions.hidden
-    //-   div.reaction__button(onclick='clickReaction(this)' data-reaction='😸')
-    //-     p 😸
-    //-   div.reaction__button(onclick='clickReaction(this)' data-reaction='🎧')
-    //-     p 🎧
-    //-   div.reaction__button(onclick='clickReaction(this)' data-reaction='🍆')
-    //-     p 🍆
+            I'm looking for a #[strong 6 month internship starting July 2018], if you'd like to know more, feel free to contact me wherever you like on the Web 🙂 (#[a(href='mailto:s.dancermichel@gmail.com') or by mail])
 
   script(src='js/app.min.js')
   script.
