💄More UI changes

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -19,11 +19,14 @@ html(dir='ltr' lang='en' class='no-js')
 
         div.conversation__bubble.conversation__bubble--general.hidden
           p.
-            I #[a(href='https://twitter.com/far0s' target='_blank') tweet] everyday, and I try to #[a(href='https://medium.com/@Far0s' target='_blank') write] when I can. I #[a(href='https://instagram.com/far0s' target='_blank') post pics] of my cats and sometimes #[a(href='https://www.behance.net/sebdancermichel' target='_blank') publish] my design work. But most of all, I #[a(href='https://github.com/far0s' target='_blank') code].
+            🐦: #[a(href='https://twitter.com/far0s' target='_blank') tweeting] #[br]
+            👨‍💻: #[a(href='https://github.com/far0s' target='_blank') coding] #[br]
+            🔏: #[a(href='https://medium.com/@Far0s' target='_blank') writing] #[br]
+            🎨: #[a(href='https://www.behance.net/sebdancermichel' target='_blank') designing]
 
         div.conversation__bubble.conversation__bubble--general.hidden
           p.
-            I'm looking for a #[strong 6 month internship starting July 2018], if you'd like to know more, feel free to contact me wherever you like on the Web 🙂 (#[a(href='mailto:s.dancermichel@gmail.com') or by mail])
+            I'm looking for a #[strong 6 month internship starting July 2018], if you'd like to know more, feel free to contact me wherever you like on the Web (#[a(href='mailto:s.dancermichel@gmail.com') or by mail]) 🙂
 
   script(src='js/app.min.js')
   script.
