--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,12 +2,20 @@
 @import 'variables';
 @import 'utilities';
 @import 'conversation';
+@import 'casestudy';
 @import 'reactions';
 body {
     background: $lightblue;
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+}
+
+button {
+    -webkit-appearance: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
 }
 
 body,
@@ -19,7 +27,8 @@ h5,
 h6,
 p,
 span,
-a {
+a,
+button {
     font-family: 'Merriweather', serif;
     font-size: 18px;
     line-height: 1.75em;
@@ -31,7 +40,7 @@ a {
 
 .wrapper {
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
     justify-content: center;
     min-height: 100vh;
     height: 100%;
@@ -53,11 +62,47 @@ a {
         position: absolute;
         left: 0;
         bottom: 0;
-        transition: .15s cubic-bezier(0.22, 0.61, 0.36, 1);
+        transition: .15s cubic-bezier(0.22, 0.61, 0.36, 1) .15s;
     }
-    &:hover::after,
-    &:focus::after,
-    &:active::after {
-        width: 100%;
+    &:hover,
+    &:focus,
+    &:active {
+        outline: 0;
+        &::after {
+            width: 100%;
+        }
     }
+}
+
+button {
+    font-weight: 700;
+    color: $teal;
+    position: relative;
+    padding: 0 10px;
+    z-index: 1;
+    transition: .15s cubic-bezier(0.22, 0.61, 0.36, 1) .15s;
+    &::after {
+        content: '';
+        background: $teal;
+        height: 100%;
+        width: 0%;
+        position: absolute;
+        left: 0;
+        transition: .15s cubic-bezier(0.22, 0.61, 0.36, 1) .15s;
+        z-index: -1;
+    }
+    &:hover,
+    &:focus,
+    &:active {
+        outline: 0;
+        color: $white;
+        &::after {
+            width: 100%;
+        }
+    }
+}
+
+::selection {
+    background: $teal;
+    color: white;
 }
